[package]
name = "calculator-rs"
description = "Calculator is a library which support calculates the value of string"
version = "0.1.1"
authors = ["misssonder <819643718@qq.com>"]
repository = "https://github.com/misssonder/calculator"
homepage = "https://github.com/misssonder/calculator"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/calculator-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
